compilador/bin/y.output
Terminals unused in grammar

   TOK_CONSTANTE_REAL
   TOK_ERROR


Grammar

    0 $accept: programa $end

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones escritura3 sentencias TOK_LLAVEDERECHA

    2 escritura1: %empty

    3 escritura2: %empty

    4 escritura3: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: tipo idpf

   26 idpf: TOK_IDENTIFICADOR

   27 declaraciones_funcion: declaraciones
   28                      | %empty

   29 sentencias: sentencia
   30           | sentencia sentencias

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA
   32          | bloque

   33 sentencia_simple: asignacion
   34                 | lectura
   35                 | escritura
   36                 | retorno_funcion

   37 bloque: condicional
   38       | bucle

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   40           | elemento_vector TOK_ASIGNACION exp

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   42 condicional: if_exp_sentencias
   43            | if_exp_sentencias TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   45 if_exp_sentencias: if_exp sentencias TOK_LLAVEDERECHA

   46 bucle: while_exp_sentencias

   47 while_exp_sentencias: while_exp sentencias TOK_LLAVEDERECHA

   48 while_exp: while TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

   49 while: TOK_WHILE

   50 lectura: TOK_SCANF TOK_IDENTIFICADOR
   51        | TOK_SCANF elemento_vector

   52 escritura: TOK_PRINTF exp

   53 retorno_funcion: initretorno exp

   54 initretorno: TOK_RETURN

   55 exp: exp TOK_MAS exp
   56    | exp TOK_MENOS exp
   57    | exp TOK_DIVISION exp
   58    | exp TOK_ASTERISCO exp
   59    | TOK_MENOS exp
   60    | exp TOK_AND exp
   61    | exp TOK_OR exp
   62    | TOK_NOT exp
   63    | TOK_IDENTIFICADOR
   64    | constante
   65    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   66    | comparacion
   67    | elemento_vector
   68    | llamadaAFuncion TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   69 llamadaAFuncion: TOK_IDENTIFICADOR

   70 lista_expresiones: argumento resto_lista_expresiones
   71                  | %empty

   72 argumento: exp

   73 resto_lista_expresiones: TOK_COMA argumento resto_lista_expresiones
   74                        | %empty

   75 comparacion: exp TOK_IGUAL exp
   76            | exp TOK_DISTINTO exp
   77            | exp TOK_MENORIGUAL exp
   78            | exp TOK_MAYORIGUAL exp
   79            | exp TOK_MENOR exp
   80            | exp TOK_MAYOR exp

   81 constante: constante_logica
   82          | constante_entera

   83 constante_logica: TOK_TRUE
   84                 | TOK_FALSE

   85 constante_entera: TOK_CONSTANTE_ENTERA

   86 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_IDENTIFICADOR (258) 20 26 39 41 50 63 69 86
TOK_CONSTANTE_REAL (259)
TOK_CONSTANTE_ENTERA (260) 13 85
TOK_MAIN (261) 1
TOK_RETURN (262) 54
TOK_ARRAY (263) 13
TOK_INT (264) 11
TOK_BOOLEAN (265) 12
TOK_SCANF (266) 50 51
TOK_PRINTF (267) 52
TOK_IF (268) 44
TOK_ELSE (269) 43
TOK_WHILE (270) 49
TOK_OR (271) 61
TOK_AND (272) 60
TOK_NOT (273) 62
TOK_DISTINTO (274) 76
TOK_IGUAL (275) 75
TOK_MENOR (276) 79
TOK_MAYOR (277) 80
TOK_MENORIGUAL (278) 77
TOK_MAYORIGUAL (279) 78
TOK_COMA (280) 15 73
TOK_PUNTOYCOMA (281) 7 23 31
TOK_LLAVEIZQUIERDA (282) 1 19 43 44 48
TOK_LLAVEDERECHA (283) 1 18 43 45 47
TOK_CORCHETEIZQUIERDO (284) 13 41
TOK_CORCHETEDERECHO (285) 13 41
TOK_PARENTESISIZQUIERDO (286) 19 44 48 65 68
TOK_PARENTESISDERECHO (287) 19 44 48 65 68
TOK_MENOS (288) 56 59
TOK_MAS (289) 55
TOK_ASTERISCO (290) 58
TOK_DIVISION (291) 57
TOK_FUNCTION (292) 20
TOK_TRUE (293) 83
TOK_FALSE (294) 84
TOK_ERROR (295)
TOK_ASIGNACION (296) 39 40


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
programa (43)
    on left: 1, on right: 0
escritura1 (44)
    on left: 2, on right: 1
escritura2 (45)
    on left: 3, on right: 1
escritura3 (46)
    on left: 4, on right: 1
declaraciones (47)
    on left: 5 6, on right: 1 6 27
declaracion (48)
    on left: 7, on right: 5 6
clase (49)
    on left: 8 9, on right: 7
clase_escalar (50)
    on left: 10, on right: 8
tipo (51)
    on left: 11 12, on right: 10 13 20 25
clase_vector (52)
    on left: 13, on right: 9
identificadores (53)
    on left: 14 15, on right: 7 15
funciones (54)
    on left: 16 17, on right: 1 16
funcion (55)
    on left: 18, on right: 16
fn_declaration (56)
    on left: 19, on right: 18
fn_name (57)
    on left: 20, on right: 19
parametros_funcion (58)
    on left: 21 22, on right: 19
resto_parametros_funcion (59)
    on left: 23 24, on right: 21 23
parametro_funcion (60)
    on left: 25, on right: 21 23
idpf (61)
    on left: 26, on right: 25
declaraciones_funcion (62)
    on left: 27 28, on right: 19
sentencias (63)
    on left: 29 30, on right: 1 18 30 43 45 47
sentencia (64)
    on left: 31 32, on right: 29 30
sentencia_simple (65)
    on left: 33 34 35 36, on right: 31
bloque (66)
    on left: 37 38, on right: 32
asignacion (67)
    on left: 39 40, on right: 33
elemento_vector (68)
    on left: 41, on right: 40 51 67
condicional (69)
    on left: 42 43, on right: 37
if_exp (70)
    on left: 44, on right: 45
if_exp_sentencias (71)
    on left: 45, on right: 42 43
bucle (72)
    on left: 46, on right: 38
while_exp_sentencias (73)
    on left: 47, on right: 46
while_exp (74)
    on left: 48, on right: 47
while (75)
    on left: 49, on right: 48
lectura (76)
    on left: 50 51, on right: 34
escritura (77)
    on left: 52, on right: 35
retorno_funcion (78)
    on left: 53, on right: 36
initretorno (79)
    on left: 54, on right: 53
exp (80)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68, on right: 39
    40 41 44 48 52 53 55 56 57 58 59 60 61 62 65 72 75 76 77 78 79
    80
llamadaAFuncion (81)
    on left: 69, on right: 68
lista_expresiones (82)
    on left: 70 71, on right: 68
argumento (83)
    on left: 72, on right: 70 73
resto_lista_expresiones (84)
    on left: 73 74, on right: 70 73
comparacion (85)
    on left: 75 76 77 78 79 80, on right: 66
constante (86)
    on left: 81 82, on right: 64
constante_logica (87)
    on left: 83 84, on right: 81
constante_entera (88)
    on left: 85, on right: 82
identificador (89)
    on left: 86, on right: 14 15


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TOK_MAIN . TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones escritura3 sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 3


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


State 3

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA . escritura1 declaraciones escritura2 funciones escritura3 sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 2 (escritura1)

    escritura1  go to state 5


State 4

    0 $accept: programa $end .

    $default  accept


State 5

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 . declaraciones escritura2 funciones escritura3 sentencias TOK_LLAVEDERECHA

    TOK_ARRAY    shift, and go to state 6
    TOK_INT      shift, and go to state 7
    TOK_BOOLEAN  shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 6

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 7
    TOK_BOOLEAN  shift, and go to state 8

    tipo  go to state 15


State 7

   11 tipo: TOK_INT .

    $default  reduce using rule 11 (tipo)


State 8

   12 tipo: TOK_BOOLEAN .

    $default  reduce using rule 12 (tipo)


State 9

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones . escritura2 funciones escritura3 sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 3 (escritura2)

    escritura2  go to state 16


State 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_ARRAY    shift, and go to state 6
    TOK_INT      shift, and go to state 7
    TOK_BOOLEAN  shift, and go to state 8

    $default  reduce using rule 5 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 19
    identificador    go to state 20


State 12

    8 clase: clase_escalar .

    $default  reduce using rule 8 (clase)


State 13

   10 clase_escalar: tipo .

    $default  reduce using rule 10 (clase_escalar)


State 14

    9 clase: clase_vector .

    $default  reduce using rule 9 (clase)


State 15

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 21


State 16

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 . funciones escritura3 sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 23
    funcion         go to state 24
    fn_declaration  go to state 25
    fn_name         go to state 26


State 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce using rule 6 (declaraciones)


State 18

   86 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 86 (identificador)


State 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 27


State 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 28

    $default  reduce using rule 14 (identificadores)


State 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 29


State 22

   20 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 7
    TOK_BOOLEAN  shift, and go to state 8

    tipo  go to state 30


State 23

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones . escritura3 sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 4 (escritura3)

    escritura3  go to state 31


State 24

   16 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 32
    funcion         go to state 24
    fn_declaration  go to state 25
    fn_name         go to state 26


State 25

   18 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_IF             shift, and go to state 37
    TOK_WHILE          shift, and go to state 38

    sentencias            go to state 39
    sentencia             go to state 40
    sentencia_simple      go to state 41
    bloque                go to state 42
    asignacion            go to state 43
    elemento_vector       go to state 44
    condicional           go to state 45
    if_exp                go to state 46
    if_exp_sentencias     go to state 47
    bucle                 go to state 48
    while_exp_sentencias  go to state 49
    while_exp             go to state 50
    while                 go to state 51
    lectura               go to state 52
    escritura             go to state 53
    retorno_funcion       go to state 54
    initretorno           go to state 55


State 26

   19 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 56


State 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 7 (declaracion)


State 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 57
    identificador    go to state 20


State 29

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 58


State 30

   20 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 59


State 31

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones escritura3 . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_IF             shift, and go to state 37
    TOK_WHILE          shift, and go to state 38

    sentencias            go to state 60
    sentencia             go to state 40
    sentencia_simple      go to state 41
    bloque                go to state 42
    asignacion            go to state 43
    elemento_vector       go to state 44
    condicional           go to state 45
    if_exp                go to state 46
    if_exp_sentencias     go to state 47
    bucle                 go to state 48
    while_exp_sentencias  go to state 49
    while_exp             go to state 50
    while                 go to state 51
    lectura               go to state 52
    escritura             go to state 53
    retorno_funcion       go to state 54
    initretorno           go to state 55


State 32

   16 funciones: funcion funciones .

    $default  reduce using rule 16 (funciones)


State 33

   39 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 61
    TOK_ASIGNACION         shift, and go to state 62


State 34

   54 initretorno: TOK_RETURN .

    $default  reduce using rule 54 (initretorno)


State 35

   50 lectura: TOK_SCANF . TOK_IDENTIFICADOR
   51        | TOK_SCANF . elemento_vector

    TOK_IDENTIFICADOR  shift, and go to state 63

    elemento_vector  go to state 64


State 36

   52 escritura: TOK_PRINTF . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 73
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 37

   44 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 79


State 38

   49 while: TOK_WHILE .

    $default  reduce using rule 49 (while)


State 39

   18 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 80


State 40

   29 sentencias: sentencia .
   30           | sentencia . sentencias

    TOK_IDENTIFICADOR  shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_IF             shift, and go to state 37
    TOK_WHILE          shift, and go to state 38

    $default  reduce using rule 29 (sentencias)

    sentencias            go to state 81
    sentencia             go to state 40
    sentencia_simple      go to state 41
    bloque                go to state 42
    asignacion            go to state 43
    elemento_vector       go to state 44
    condicional           go to state 45
    if_exp                go to state 46
    if_exp_sentencias     go to state 47
    bucle                 go to state 48
    while_exp_sentencias  go to state 49
    while_exp             go to state 50
    while                 go to state 51
    lectura               go to state 52
    escritura             go to state 53
    retorno_funcion       go to state 54
    initretorno           go to state 55


State 41

   31 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 82


State 42

   32 sentencia: bloque .

    $default  reduce using rule 32 (sentencia)


State 43

   33 sentencia_simple: asignacion .

    $default  reduce using rule 33 (sentencia_simple)


State 44

   40 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 83


State 45

   37 bloque: condicional .

    $default  reduce using rule 37 (bloque)


State 46

   45 if_exp_sentencias: if_exp . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_IF             shift, and go to state 37
    TOK_WHILE          shift, and go to state 38

    sentencias            go to state 84
    sentencia             go to state 40
    sentencia_simple      go to state 41
    bloque                go to state 42
    asignacion            go to state 43
    elemento_vector       go to state 44
    condicional           go to state 45
    if_exp                go to state 46
    if_exp_sentencias     go to state 47
    bucle                 go to state 48
    while_exp_sentencias  go to state 49
    while_exp             go to state 50
    while                 go to state 51
    lectura               go to state 52
    escritura             go to state 53
    retorno_funcion       go to state 54
    initretorno           go to state 55


State 47

   42 condicional: if_exp_sentencias .
   43            | if_exp_sentencias . TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_ELSE  shift, and go to state 85

    $default  reduce using rule 42 (condicional)


State 48

   38 bloque: bucle .

    $default  reduce using rule 38 (bloque)


State 49

   46 bucle: while_exp_sentencias .

    $default  reduce using rule 46 (bucle)


State 50

   47 while_exp_sentencias: while_exp . sentencias TOK_LLAVEDERECHA

    TOK_IDENTIFICADOR  shift, and go to state 33
    TOK_RETURN         shift, and go to state 34
    TOK_SCANF          shift, and go to state 35
    TOK_PRINTF         shift, and go to state 36
    TOK_IF             shift, and go to state 37
    TOK_WHILE          shift, and go to state 38

    sentencias            go to state 86
    sentencia             go to state 40
    sentencia_simple      go to state 41
    bloque                go to state 42
    asignacion            go to state 43
    elemento_vector       go to state 44
    condicional           go to state 45
    if_exp                go to state 46
    if_exp_sentencias     go to state 47
    bucle                 go to state 48
    while_exp_sentencias  go to state 49
    while_exp             go to state 50
    while                 go to state 51
    lectura               go to state 52
    escritura             go to state 53
    retorno_funcion       go to state 54
    initretorno           go to state 55


State 51

   48 while_exp: while . TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_PARENTESISIZQUIERDO  shift, and go to state 87


State 52

   34 sentencia_simple: lectura .

    $default  reduce using rule 34 (sentencia_simple)


State 53

   35 sentencia_simple: escritura .

    $default  reduce using rule 35 (sentencia_simple)


State 54

   36 sentencia_simple: retorno_funcion .

    $default  reduce using rule 36 (sentencia_simple)


State 55

   53 retorno_funcion: initretorno . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 88
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 56

   19 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      shift, and go to state 7
    TOK_BOOLEAN  shift, and go to state 8

    $default  reduce using rule 22 (parametros_funcion)

    tipo                go to state 89
    parametros_funcion  go to state 90
    parametro_funcion   go to state 91


State 57

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 15 (identificadores)


State 58

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce using rule 13 (clase_vector)


State 59

   20 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 20 (fn_name)


State 60

    1 programa: TOK_MAIN TOK_LLAVEIZQUIERDA escritura1 declaraciones escritura2 funciones escritura3 sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 92


State 61

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 93
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 62

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 94
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 63

   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   50 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 61

    $default  reduce using rule 50 (lectura)


State 64

   51 lectura: TOK_SCANF elemento_vector .

    $default  reduce using rule 51 (lectura)


State 65

   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   63 exp: TOK_IDENTIFICADOR .
   69 llamadaAFuncion: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 61

    TOK_PARENTESISIZQUIERDO  reduce using rule 69 (llamadaAFuncion)
    $default                 reduce using rule 63 (exp)


State 66

   85 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 85 (constante_entera)


State 67

   62 exp: TOK_NOT . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 95
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 68

   65 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 96
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 69

   59 exp: TOK_MENOS . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 97
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 70

   83 constante_logica: TOK_TRUE .

    $default  reduce using rule 83 (constante_logica)


State 71

   84 constante_logica: TOK_FALSE .

    $default  reduce using rule 84 (constante_logica)


State 72

   67 exp: elemento_vector .

    $default  reduce using rule 67 (exp)


State 73

   52 escritura: TOK_PRINTF exp .
   55 exp: exp . TOK_MAS exp
   56    | exp . TOK_MENOS exp
   57    | exp . TOK_DIVISION exp
   58    | exp . TOK_ASTERISCO exp
   60    | exp . TOK_AND exp
   61    | exp . TOK_OR exp
   75 comparacion: exp . TOK_IGUAL exp
   76            | exp . TOK_DISTINTO exp
   77            | exp . TOK_MENORIGUAL exp
   78            | exp . TOK_MAYORIGUAL exp
   79            | exp . TOK_MENOR exp
   80            | exp . TOK_MAYOR exp

    TOK_OR          shift, and go to state 98
    TOK_AND         shift, and go to state 99
    TOK_DISTINTO    shift, and go to state 100
    TOK_IGUAL       shift, and go to state 101
    TOK_MENOR       shift, and go to state 102
    TOK_MAYOR       shift, and go to state 103
    TOK_MENORIGUAL  shift, and go to state 104
    TOK_MAYORIGUAL  shift, and go to state 105
    TOK_MENOS       shift, and go to state 106
    TOK_MAS         shift, and go to state 107
    TOK_ASTERISCO   shift, and go to state 108
    TOK_DIVISION    shift, and go to state 109

    $default  reduce using rule 52 (escritura)


State 74

   68 exp: llamadaAFuncion . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 110


State 75

   66 exp: comparacion .

    $default  reduce using rule 66 (exp)


State 76

   64 exp: constante .

    $default  reduce using rule 64 (exp)


State 77

   81 constante: constante_logica .

    $default  reduce using rule 81 (constante)


State 78

   82 constante: constante_entera .

    $default  reduce using rule 82 (constante)


State 79

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 111
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 80

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 18 (funcion)


State 81

   30 sentencias: sentencia sentencias .

    $default  reduce using rule 30 (sentencias)


State 82

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 31 (sentencia)


State 83

   40 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 112
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 84

   45 if_exp_sentencias: if_exp sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 113


State 85

   43 condicional: if_exp_sentencias TOK_ELSE . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 114


State 86

   47 while_exp_sentencias: while_exp sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 115


State 87

   48 while_exp: while TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA

    TOK_IDENTIFICADOR        shift, and go to state 65
    TOK_CONSTANTE_ENTERA     shift, and go to state 66
    TOK_NOT                  shift, and go to state 67
    TOK_PARENTESISIZQUIERDO  shift, and go to state 68
    TOK_MENOS                shift, and go to state 69
    TOK_TRUE                 shift, and go to state 70
    TOK_FALSE                shift, and go to state 71

    elemento_vector   go to state 72
    exp               go to state 116
    llamadaAFuncion   go to state 74
    comparacion       go to state 75
    constante         go to state 76
    constante_logica  go to state 77
    constante_entera  go to state 78


State 88
